Social tag section added to the website

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <img src="./assets/pizza.png" alt="Photo of a pizza" />
             </div>
             <div class="tag">
-              <p>Pizza Burg</p>
+              <span>Pizza Burg</span>
             </div>
             <h3>Up To 50% Off</h3>
             <p class="card-description">
@@ -48,7 +48,7 @@
               <img src="./assets/biriyani.png" alt="Photo of a pizza" />
             </div>
             <div class="tag">
-              <p>Kacchi Bhai</p>
+              <span>Kacchi Bhai</span>
             </div>
             <h3>Up To 50% Off</h3>
             <p class="card-description">
@@ -61,17 +61,50 @@
               <img src="./assets/burger.png" alt="Photo of a pizza" />
             </div>
             <div class="tag">
-              <p>Burger King</p>
+              <span>Burger King</span>
             </div>
             <h3>Up To 50% Off</h3>
             <p class="card-description">
               Contrary to popular belief, Lorem Ipsum is not simply random text.
             </p>
           </div>
-
         </div>
         <button type="submit">Watch All Sells</button>
+      </section>
 
+      <!-- Social media section -->
+      <section id="social">
+        <div class="social-content">
+          <div class="left">
+            <img src="./assets/foods.png" alt="" />
+          </div>
+          <div class="right">
+            <h2>We always make sure to provide you with good food</h2>
+            <p>Don’t miss a thing! Subscribe to our newsletter</p>
+            <!-- <span class="social-tag">Follow Us On</span> -->
+             <div class="social-tag">
+              <p>Follow us on</p>
+             </div>
+            <ul class="social-links">
+              <li>
+                <a href="#"><img src="./assets/social/Group 1.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./assets/social/x-2 1.svg" alt="" /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./assets/social/instagram-2016-5 1.svg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./assets/social/pinterest-3 1.svg" alt=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
 
