--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@
           <div class="right">
             <h2>We always make sure to provide you with good food</h2>
             <p>Don’t miss a thing! Subscribe to our newsletter</p>
-            <!-- <span class="social-tag">Follow Us On</span> -->
-             <div class="social-tag">
+            <div class="social-tag">
               <p>Follow us on</p>
-             </div>
+            </div>
             <ul class="social-links">
               <li>
                 <a href="#"><img src="./assets/social/Group 1.svg" alt="" /></a>
@@ -106,6 +105,23 @@
           </div>
         </div>
       </section>
+
+      <!-- Single card section -->
+       <section id="single-card">
+        <div class="card">
+          <div class="image">
+            <img src="./assets/pizza.png" alt="Photo of a pizza" />
+          </div>
+          <div class="tag">
+            <span>Pizza Burg</span>
+          </div>
+          <h3>Up To 50% Off</h3>
+          <p class="card-description">
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+          </p>
+          <button type="submit">Watch All Sells</button>
+        </div>
+       </section>
     </main>
 
     <footer></footer>
