Footer section added to the website

--- a/index.html
+++ b/index.html
@@ -124,6 +124,32 @@
        </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-con">
+        <h2>We always make sure to provide you with good food</h2>
+      <p>Don’t miss a thing! Subscribe to our newsletter</p>
+      <div class="social-tag">
+        <p>Follow us on</p>
+      </div>
+      <ul class="social-links">
+        <li>
+          <a href="#"><img src="./assets/social/Group 1.svg" alt="" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="./assets/social/x-2 1.svg" alt="" /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./assets/social/instagram-2016-5 1.svg" alt=""
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./assets/social/pinterest-3 1.svg" alt=""
+          /></a>
+        </li>
+      </ul>
+      </div>
+    </footer>
   </body>
 </html>
